tests/NormalTests/paczka1/fuzzy1/39515314.err
Error in line 19: iYZw A291 -2,8
Error in line 14: iYZw A291 20,3
Error in line 20: iYZw A260 97,4
Error in line 10: V9s2569oS S367 45,3
Error in line 23: V9s2569oS A260 56,4
Error in line 24: izGjJgHWUb S367 94,3
